########################### Top Level MakeFile.am  ###########################

## Generate Makefile.in via "automake". Do not delete!

AUTOMAKE_OPTIONS= 1.15

SUBDIRS= src etc

man1_MANS= turns-n-layers.1

EXTRA_DIST= fox-1.6.55.tar.gz $(man1_MANS) m4

########################### Top Level MakeFile.am  ###########################
