############################# Source MakeFile.am #############################

## Generates Makefile.in via "automake". Do not delete!

bin_PROGRAMS= turns-n-layers

turns_n_layers_LDADD= $(FoxLibs)

turns_n_layers_SOURCES= \
turns-n-layers.cpp \
mainappwin.cpp mainappwin.h \
appabout.cpp appabout.h \
helpcntsbox.cpp helpcntsbox.h \
splmsgbox.cpp splmsgbox.h \
coredata.cpp coredata.h \
wire.cpp wire.h \
icons.cpp icons.h \
FreeDolphins.h defs.h locations.h

############################# Source MakeFile.am #############################
